# Chip-8

./: CMakeLists.txt  README.md  main.cpp
includes/: chip8.h  platform.h
src/: chip8.cpp  platform.cpp
